feat list commits

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,10 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@api/*": ["src/app/api/*"],
+      "@uitl/*": ["src/app/util/*"]
+    }
   }
 }
