add jest remove jasmine

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,9 @@
     "typeRoots": [
       "node_modules/@types"
     ],
+    "types": [
+      "jest"
+    ],
     "lib": [
       "es2018",
       "dom"
