--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~8.0.1",
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
+    "@testing-library/angular": "^7.0.1",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
@@ -40,5 +41,11 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "@api/(.*)": "<rootDir>/src/app/api/$1",
+      "@util/(.*)": "<rootDir>/src/app/util/$1"
+    }
   }
 }
